# hands_on_gpt

./: .gitattributes  .gitignore  .python-version  hw1.md  hw2.md  main.py  pyproject.toml
hw1-code/: mywork.md
hw1-code/bpe/: bpe.ipynb
hw1-code/lora/: lora.ipynb  lora_alpaca.py  self_lora.ipynb
hw1-code/lora/peft_lab_outputs/checkpoint-1000/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/checkpoint-1500/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/checkpoint-1875/: README.md  adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/checkpoint-4/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/checkpoint-500/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/checkpoint-940/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
hw1-code/lora/peft_lab_outputs/lora_model/: adapter_model.safetensors
hw1-code/lora/wandb/: latest-run
hw1-code/lora/wandb/run-20250614_215448-q7dpfjrk/: run-q7dpfjrk.wandb
hw1-code/pretrain/: main.py  pyproject.toml  requirements.txt
hw1-code/pretrain/learning/: 0_tokenizer.ipynb  0_tokenizer.py  1_model.ipynb  2_akgpt2.ipynb  aaa1_model.ipynb  model_1.py
(+14 files in other folders)
