[project]
name = "pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==2.21.0",
    "datasketch==1.6.4",
    "jieba==0.42.1",
    "ujson==5.1.0",
    "pandas==1.5.3",
    "Flask==3.0.3",
    "Flask_Cors==4.0.0",
    "jsonlines==4.0.0",
    "marshmallow==3.22.0",
    "matplotlib==3.10.0",
    "ngrok==1.4.0",
    "nltk==3.8",
    "numpy==1.26.4",
    "openai==1.59.6",
    "peft==0.7.1",
    "psutil==5.9.8",
    "pydantic==2.8.2",
    "rich==13.7.1",
    "scikit_learn==1.5.1",
    "sentence_transformers==2.3.1",
    "simhash==2.1.2",
    "transformers==4.48.0",
    "jinja2==3.1.2",
    "trl==0.13.0",
    "wandb==0.18.3",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "modelscope",
    "jupyter",
    "wandb"
]

[tool.uv.workspace]
members = [
    "minimind",
]
